Fix styling of ping to avoid clipping

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -37,7 +37,6 @@
 }
 
 .buzzContainer {
-    position: relative;
     flex: 1;
     background-color: var(--off-white);
     display: flex;
@@ -81,7 +80,7 @@
 }
 
 .ping {
-    position: absolute;
-    bottom: 5px;
-    right: 10px;
+    align-self: flex-end;
+    margin-bottom: 5px;
+    margin-right: 10px;
 }
